access-control/dynamic-admission-controller/dynamic-admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook
webhooks:
- name: 192.168.0.30
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
     url: "https://192.168.0.30:30733/validate"
     caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMekNDQWhlZ0F3SUJBZ0lVZk5Sd3JkUWIwQXNnQ1VYWlVOellaSnNHb0hvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0p6RVRNQkVHQTFVRUF3d0thM1ZpWlhKdVpYUmxjekVRTUE0R0ExVUVDZ3dIZDJWaWFHOXZhekFlRncweQpOVEV5TURFd09UQTVNalJhRncwek5UQTRNekV3T1RBNU1qUmFNQ2N4RXpBUkJnTlZCQU1NQ210MVltVnlibVYwClpYTXhFREFPQmdOVkJBb01CM2RsWW1odmIyc3dnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQ1hpbXJYSGJtbGs1MlBHZUVld1FLT2ZObXVLbDRTTkRVa3FUMmNDRzBTZmNlMXZZaS8xZUdpY0lZTAp0MnYxelB5SjRnM [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
